--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Paradise inn</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="my-style.css">
+    <link rel="icon" type="image/x-icon" href="/image/p2.png">
 </head>
 <body>
     <section class="container">
